fixed bug with hobbies-interests-projects.component not collapsing fully, adjusted font size of world populations to be more consistent

--- a/cv-website/src/app/pokemon/pokemon.component.css
+++ b/cv-website/src/app/pokemon/pokemon.component.css
@@ -74,6 +74,7 @@
   border-bottom: 1px solid #ddd;
   font-family: Arial, sans-serif;
   font-weight: bold;
+  font-size: 1rem;
 }
 
 .collapsible-content {
