--- a/cv-website/src/styles.css
+++ b/cv-website/src/styles.css
@@ -30,10 +30,6 @@
     gap: 10px; /* Add spacing between items */
     justify-content: space-evenly; /* Space items evenly */
   }
-
-  .collapsible-header.collapsed-header{
-    width: auto;
-  }
   .projects-container {
     display: flex;
     justify-content: space-between;
@@ -124,7 +120,7 @@
     margin: 10px;
     padding: 10px;
     font-family: 'Funnel', Monospace;
-    list-style-type: disc;
+    list-style-type: none;
   }
   li:hover{
     list-style-type: disc;
